--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"//2": "https://docs.npmjs.com/files/package.json",
 	"//3": "updating this file will download and update your packages",
 	"name": "my-hyperdev-app",
-	"version": "0.0.1",
-	"description": "What am I about?",
+	"version": "0.0.1.20161014",
+	"description": "This is a test hyperdev app by dreftymac",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
